# airgap-patch-orchestrator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
ansible/: ansible.cfg
ansible/inventories/: lab.yml
ansible/inventories/group_vars/: all.yml
ansible/playbooks/: assess.yml  patch.yml
ansible/roles/offline_repo/tasks/: main.yml
ansible/roles/patch_apply/tasks/: main.yml
ansible/roles/patch_assess/tasks/: main.yml
ansible/roles/patch_cleanup/tasks/: main.yml
ansible/roles/patch_preflight/tasks/: main.yml
ansible/roles/patch_verify/tasks/: main.yml
docs/: production-security-workflow.md
lab/: Dockerfile  compose.yml
patchctl/: __init__.py  cli.py  verifier.py
scripts/: bootstrap.ps1  bootstrap.sh  build-demo-bundle.sh  lab.ps1  lab.sh
tests/: test_cli.py  test_project_contract.py  test_verifier.py
