[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airgap-patch-orchestrator"
version = "0.1.0"
description = "Offline patch bundle verification and Ansible orchestration lab"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
patchctl = "patchctl.cli:main"

[tool.setuptools]
packages = ["patchctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
